--- a/src/app/app/spotyourtrain/spotyourtrain.component.html
+++ b/src/app/app/spotyourtrain/spotyourtrain.component.html
@@ -1,25 +1,21 @@
 <app-header></app-header>
 <div class="center">
-  <form>
+  <form  [formGroup]="myGroup"(ngSubmit)="onsubmit()">
     <div class="form-group">
-       
-            <label for="fname">Train No./Name</label><br>
-            <input type="text" id="fname" name="fname" placeholder="Train No/Name" size="50">
+      <label for="fname">Train No./Name</label><br>
+            <input type="text" [(ngModel)]="fname" placeholder="Train No/Name" size="50" formControlName="fname" />
             <button type="button" class="btn btn-primary btn-sm">Clear</button>
+            <!-- <p>Value: {{ fstation }}</p> -->
         </div>
-    <button type="button" class="button">Submit</button>
+    <button type="button" (click)="onsubmit()" [disabled]="myGroup.invalid">Submit</button>
   </form>
 </div>
-
-
-  <table class="table">
+<table class="table">
     <thead>
       <tr>
         <th scope="col">Arrival</th>
         <th scope="col">Station</th>
         <th scope="col">Depar</th>
-
-        
       </tr>
     </thead>
     <tbody>
