--- a/src/app/app/livestation/livestation.component.html
+++ b/src/app/app/livestation/livestation.component.html
@@ -1,20 +1,18 @@
 <app-header></app-header>
 <div class="center">
-  <form>
+  <form [formGroup]="myGroup"(ngSubmit)="onsubmit()">
     <div class="form-group">
-
       <label for="fname">Station</label><br>
-      <input type="text" id="fname" name="fname" placeholder="Station"
-        size="50">
+      <input type="text" id="fname" name="fname"[(ngModel)]="fname" placeholder="Station"
+        size="50" formControlName="fname" />
       <button type="button" class="btn btn-primary btn-sm">Clear</button>
     </div>
     <div class="form-group">
       <label for="fname">Go Station</label><br>
-      <input type="text" id="fname" name="fname" placeholder="Go Station"
-        size="50">
+      <input type="text" name="lname" [(ngModel)]="lname" placeholder="Go Station" size="50" formControlName="lname" />
       <button type="button" class="btn btn-primary btn-sm">Clear</button>
     </div>
-    <button type="button" class="button">Submit</button>
+    <button type="button" (click)="onsubmit()" [disabled]="myGroup.invalid">Submit</button>
   </form>
 </div>
 <table class="table">
