--- a/src/app/app/home/home.component.scss
+++ b/src/app/app/home/home.component.scss
@@ -2,6 +2,13 @@
 .container-fluid{
     display: grid;
     margin: -80px;
+   
+}
+.card{
+   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: medium;
+    font-weight: 100;
+    
 
 }
 .col{
