--- a/src/app/app/trainschedule/trainschedule.component.html
+++ b/src/app/app/trainschedule/trainschedule.component.html
@@ -13,46 +13,84 @@
      <div class="col-group"><button type="submit"  (click)="onSubmit()"  [disabled]="reactiveForm.invalid"  >Submit</button>
      </div>
     </form>
-</div>
+</div><br><br><br><br><br><br>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Sr.</th>
-        <th scope="col">Station</th>
-        <th scope="col">Day</th>
-        <th scope="col">Arr.Dep.</th>
-        <th scope="col">Halt</th>
-        <th scope="col">Dist.KMs.</th>
-        
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>VALSAD BL</td>
-        <td>1</td>
-        <td>SRC 04:05</td>
-        <td>1 Min</td>
-        <td>9</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>NABIPUR NL</td>
-        <td>1</td>
-        <td>SRC 04:05</td>
-        <td>1 Min</td>
-        <td>9</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Vadodara BRC</td>
-        <td>1</td>
-        <td>SRC 04:05</td>
-        <td>1 Min</td>
-        <td>9</td>
-      </tr>
-    </tbody>
-  </table>
-    
- 
+<table class="table">
+  <tbody>
+    <tr>
+      <td colspan="3">
+        <div class="textalign-center">
+          <span class="left"><b>22956</b>
+            KUTCH EXPRESS<br></span>
+          <span class="right">Daily | Superfast</span><br>
+          </div>
+          <div class="textalign-center">
+            <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
+            <b>--03:14 Hrs.--</b>
+            2S,SL,3A,2A,1A
+            <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
+            </div>
+          </td>
+    </tr>
+    <tr>
+      <td colspan="3">
+        <div class="textalign-center">
+          <span class="left"><b>13034</b>
+            GUJARAT QUEEN<br></span>
+          <span class="right">Daily | Memu</span><br>
+          </div>
+          <div class="textalign-center">
+            <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
+            <b>--03:14 Hrs.--</b>
+            2S,SL,3A,2A,1A
+            <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
+            </div>
+          </td>
+    </tr>
+    <tr>
+      <td colspan="3">
+        <div class="textalign-center">
+          <span class="left"><b>22056</b>
+            SABARMATI EXPRESS<br></span>
+          <span class="right">Daily | Superfast</span><br>
+          </div>
+          <div class="textalign-center">
+            <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
+            <b>--03:14 Hrs.--</b>
+            2S,SL,3A,2A,1A
+            <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
+            </div>
+          </td>
+    </tr>
+    <tr>
+      <td colspan="3">
+        <div class="textalign-center">
+          <span class="left"><b>22066</b>
+           VANDE BHARAT<br></span>
+          <span class="right">Daily | Superfast</span><br>
+          </div>
+          <div class="textalign-center">
+            <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
+            <b>--03:14 Hrs.--</b>
+            2S,SL,3A,2A,1A
+            <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
+            </div>
+          </td>
+    </tr>
+    <tr>
+      <td colspan="3">
+        <div class="textalign-center">
+          <span class="left"><b>22046</b>
+            SAIRASTHRA EXPRSS<br></span>
+          <span class="right">Daily | Superfast</span><br>
+          </div>
+          <div class="textalign-center">
+            <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
+            <b>--03:14 Hrs.--</b>
+            2S,SL,3A,2A,1A
+            <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
+            </div>
+          </td>
+    </tr>
+  </tbody>
+</table>
