--- a/src/app/app/livestation/livestation.component.scss
+++ b/src/app/app/livestation/livestation.component.scss
@@ -33,4 +33,27 @@
     padding: 5px;
     margin: 5px;
   }
+  form{
+    padding: 15px;
+
+  }
+   // ===============================table Css==========================/
+   .left{
+    float: left;
+  }
+  .right{
+    float: right;
+  }
+  .textalign-center{
+    text-align: center;
+  }
+  td {
+    background-color: rgb(173, 183, 185);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 50;
+}
+b{
+  font-weight: bold;
+}
+  
 
