--- a/src/app/app/spotyourtrain/spotyourtrain.component.scss
+++ b/src/app/app/spotyourtrain/spotyourtrain.component.scss
@@ -33,3 +33,22 @@
     padding: 5px;
     margin: 5px;
   }
+   // ===============================table Css==========================/
+   .left{
+    float: left;
+  }
+  .right{
+    float: right;
+  }
+  .textalign-center{
+    text-align: center;
+  }
+  td {
+    background-color: rgb(173, 183, 185);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 50;
+}
+b{
+  font-weight: bold;
+}
+  
