--- a/src/app/app/trainbwstation/trainbwstation.component.html
+++ b/src/app/app/trainbwstation/trainbwstation.component.html
@@ -1,48 +1,109 @@
 <app-header></app-header>
 
-<form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
-    <div class="center">
-  <div class="form-group">
+<form [formGroup]="myGroup" (ngSubmit)="onSubmit()">
+  <div>
+  <div>
     <label for="fname">From Station</label><br>
-    <input type="text" name="fname" value="fname"placeholder="From Station" size="50" formControlName="fname" />
-    <button type="button" class="btn btn-primary btn-sm">Clear</button>
-</div>
-<div class="form-group">
-<label for="fname">To Station</label><br>
-<input type="text" placeholder="To Station"  name="lname" value="lname" size="50" formControlName="lname" />
+    <select aria-label="label for the select" [(ngModel)]="fstation" name="fstation" placeholder="From Station" (ngModelChange)="onOptionsSelected()" formControlName="fstation" >
+      <option *ngFor="let station of station" [ngValue]="station">{{station.stationname}} {{station.stationcode}}
+      </option>
+  </select>
+<!-- <div>
+{{filtered|json}}
+</div> -->
 <button type="button" class="btn btn-primary btn-sm">Clear</button>
 </div>
-<button type="button" (click)="onSubmit()" [disabled]="reactiveForm.invalid" >Submit</button>
+<div>
+<label for="fname">To Station</label><br>
+<select aria-label="label for the select"  [(ngModel)]="tstation" name="tstation" placeholder="To Station" (ngModelChange)="onOptionsSelectedt()" formControlName="tstation" >
+  <option *ngFor="let station of station" [ngValue]="station">{{station.stationname}} {{station.stationcode}}</option>
+</select>
+<!-- <div>
+{{filtered|json}}
+</div> -->
+<button type="button" class="btn btn-primary btn-sm">Clear</button>
+</div>
+<button type="button" (click)="onSubmit()" [disabled]="myGroup.invalid">Submit</button>
 
 </div>
-</form>
-    
-<table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Sr.</th>
-        <th scope="coxl">Station</th>
-       
-        
-      </tr>
-    </thead>
+</form><br><br><br><br>
+  
+  <table class="table">
     <tbody>
       <tr>
-       
-        <td>1 Min</td>
-        <td>9</td>
+        <td colspan="3">
+          <div class="textalign-center">
+            <span class="left"><b>22956</b>
+              KUTCH EXPRESS<br></span>
+            <span class="right">Daily | Superfast</span><br>
+            </div>
+            <div class="textalign-center">
+              <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
+              <b>--03:14 Hrs.--</b>
+              2S,SL,3A,2A,1A
+              <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
+              </div>
+            </td>
       </tr>
       <tr>
-       
-        <td>SRC 04:05</td>
-        <td>1 Min</td>
-       
+        <td colspan="3">
+          <div class="textalign-center">
+            <span class="left"><b>13034</b>
+              GUJARAT QUEEN<br></span>
+            <span class="right">Daily | Memu</span><br>
+            </div>
+            <div class="textalign-center">
+              <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
+              <b>--03:14 Hrs.--</b>
+              2S,SL,3A,2A,1A
+              <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
+              </div>
+            </td>
       </tr>
       <tr>
-       
-        <td>1 Min</td>
-        <td>9</td>
+        <td colspan="3">
+          <div class="textalign-center">
+            <span class="left"><b>22056</b>
+              SABARMATI EXPRESS<br></span>
+            <span class="right">Daily | Superfast</span><br>
+            </div>
+            <div class="textalign-center">
+              <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
+              <b>--03:14 Hrs.--</b>
+              2S,SL,3A,2A,1A
+              <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
+              </div>
+            </td>
+      </tr>
+      <tr>
+        <td colspan="3">
+          <div class="textalign-center">
+            <span class="left"><b>22066</b>
+             VANDE BHARAT<br></span>
+            <span class="right">Daily | Superfast</span><br>
+            </div>
+            <div class="textalign-center">
+              <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
+              <b>--03:14 Hrs.--</b>
+              2S,SL,3A,2A,1A
+              <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
+              </div>
+            </td>
+      </tr>
+      <tr>
+        <td colspan="3">
+          <div class="textalign-center">
+            <span class="left"><b>22046</b>
+              SAIRASTHRA EXPRSS<br></span>
+            <span class="right">Daily | Superfast</span><br>
+            </div>
+            <div class="textalign-center">
+              <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
+              <b>--03:14 Hrs.--</b>
+              2S,SL,3A,2A,1A
+              <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
+              </div>
+            </td>
       </tr>
     </tbody>
   </table>
-    
