--- a/src/app/app/trainbwstation/trainbwstation.component.scss
+++ b/src/app/app/trainbwstation/trainbwstation.component.scss
@@ -10,8 +10,8 @@
     
 }
 .center{
-    margin: 50px;
-    padding: 50px;
+    margin: 60px;
+    padding: 90px;
 }
 input{
     position: relative;
@@ -38,3 +38,28 @@ input{
     padding: 5px;
     margin: 5px;
   }
+  .left{
+    float: left;
+  }
+  .right{
+    float: right;
+  }
+  .textalign-center{
+    text-align: center;
+  }
+  td {
+    background-color: rgb(173, 183, 185);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 50;
+}
+b{
+  font-weight: bold;
+}
+form{
+  margin-left: 20px;
+  padding: 50px;
+}
+select{
+width: 500px;
+}
+  
