add designing css

--- a/src/app/app/aboutus/aboutus.component.scss
+++ b/src/app/app/aboutus/aboutus.component.scss
@@ -2,6 +2,7 @@
     padding: 200px;
     margin: 0px;
     text-align: center;
-    background-color: #474e5d;
+    background-color: #5c6c94;
     color: white;
+    height: 700px;
   }
