--- a/src/app/app/trainbwstation/trainbwstation.component.scss
+++ b/src/app/app/trainbwstation/trainbwstation.component.scss
@@ -56,8 +56,8 @@ b{
   font-weight: bold;
 }
 form{
-  margin-left: 20px;
-  padding: 50px;
+background-color: aqua;
+padding: 50px;
 }
 select{
 width: 500px;
